# wlp-testing

./: .gitignore  README.md  easy.gcl  example.gcl  input.cgl  input.gcl  local.gcl  stack.yaml  unfold.gcl  wlp-test.cabal  wlp.cabal
Paper/: paper.tex
Paper/code/: example.gcl  example0.gcl  forall.gcl  forall2.gcl  loop_invariant.gcl  loop_invariant0.gcl  minind.gcl  minind0.gcl  progs.gcl  swap.gcl  var.gcl  var2.gcl
app/: Main.hs
examples/: arith.gcl  array.gcl  array2.gcl  array2_fail.gcl  array3.gcl  array4.gcl  array5.gcl  array6.gcl  array_fail.gcl  assert.gcl  assume.gcl  coba.gcl  coba2.gcl  easy.gcl  example.gcl  exist.gcl  input.gcl  local.gcl  loop.gcl  loop1.gcl  loop2.gcl  loop_fail.gcl  loop_invariant.gcl  loop_invariant2.gcl  loop_invariant3.gcl  loop_invariant4.gcl  loop_invariant_fail.gcl  loop_invariant_forall.gcl  loop_invariant_forall_fail.gcl  maxind.gcl  minind.gcl  minind_alt.gcl  minind_fail.gcl  minind_fail2.gcl  prenex.gcl  programs.gcl  programs2.gcl  programs3.gcl  programs_fail.gcl  relevant.gcl  (+12 more)
examples/arrays/: array2.gcl  array3.gcl  array_fail.gcl
src/: AST.hs  Normalizer.hs  Parser.hs  Paths.hs  PrettyPrinter.hs  ProgramCalls.hs  Renaming.hs  SAT.hs  Wlp.hs
test/: Spec.hs  TExamples.hs  TFull.hs  TInputs.hs  TNorm.hs  TPaths.hs  TRenaming.hs  TSat.hs  TSatArray.hs  TWlp.hs
