name:                wlp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/omelkonian/wlp-testing
author:              Orestis Melkonian, Chris Aronis
maintainer:          Formal Verification/Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST, Parser, PrettyPrinter, Paths
  build-depends:       base >= 4.7 && < 5,
                       parsec >= 3.1
  default-language:    Haskell2010

executable wlp-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec >= 3.1
                     , wlp-test
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/omelkonian/wlp-testing
