name:                wlp-test
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/omelkonian/wlp-testing
author:              Orestis Melkonian, Chris Aronis
maintainer:          Formal Verification/Testing
build-type:          Simple
extra-source-files:  README.md
cabal-version:       >=1.10

library
  hs-source-dirs:      src
  exposed-modules:     AST
                     , Parser
                     , PrettyPrinter
                     , Paths
                     , Wlp
                     , Normalizer
                     , Renaming
                     , SAT
  build-depends:       base >= 4.7 && < 5
                     , parsec >= 3.1
                     , mtl
                     , sbv
                     , containers
                     , optparse-applicative
                     , ansi-terminal
  default-language:    Haskell2010

executable wlp-test-exe
  hs-source-dirs:      app
  main-is:             Main.hs
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  build-depends:       base
                     , parsec >= 3.1
                     , mtl
                     , sbv
                     , containers
                     , optparse-applicative
                     , wlp-test
                     , ansi-terminal
  default-language:    Haskell2010

test-suite quickcheck-test-framework-test
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             Spec.hs
  other-modules:       TExamples
                     , TRenaming
                     , TPaths
                     , TWlp
                     , TNorm
                     , TSat
                     , TFull
  build-depends:       base
                     , wlp-test
                     , test-framework
                     , test-framework-hunit
                     , HUnit
                     , mtl
                     , sbv
                     , containers
  ghc-options:         -threaded -rtsopts -with-rtsopts=-N
  default-language:    Haskell2010

source-repository head
  type:     git
  location: https://github.com/omelkonian/wlp-testing
